--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,10 @@ body {
 	width: 100%;
 	height: 100%;
 }
+#board .hover {
+	background-color: aqua;
+}
+
 .vertical, .horizontal {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
