--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 
+:root {
+	--light-square: #F0D9B5;
+	--dark-square: #B58863;
+	--highlight: rgba(255, 240, 0, 0.25);
+}
+
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -15,13 +21,13 @@ body {
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
 	aspect-ratio: 1 / 1;
-	background-color: #F0D9B5;
+	background-color: var(--light-square);
 	position: relative;
 	width: 600px;
 }
 
 #board .darkSquare{
-    background-color: #B58863;
+    background-color: var(--dark-square);
 }
 
 .square {
@@ -33,6 +39,13 @@ body {
 .square > img {
 	width: 100%;
 	height: 100%;
+}
+
+.darkSquare.highlighted {
+	background: linear-gradient(var(--highlight), var(--highlight)), var(--dark-square);
+}
+.highlighted {
+	background: linear-gradient(var(--highlight), var(--highlight)), var(--light-square);
 }
 
 .vertical, .horizontal {
