--- a/src/styles.css
+++ b/src/styles.css
@@ -46,11 +46,23 @@ body {
 	height: 100%;
 }
 
-.darkSquare.possible {
-	background: linear-gradient(var(--possible), var(--possible)), var(--dark-square);
+.darkSquare.possible, .square.possible {
+	background-image: url('./chess/cburnett/move.svg');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 30%;
 }
-.square.possible {
-	background: linear-gradient(var(--possible), var(--possible)), var(--light-square);
+
+.darkSquare.possible:hover, .square.possible:hover {
+	background-size: 150%;
+}
+
+
+.darkSquare.highlighted {
+	background: linear-gradient(var(--highlight), var(--highlight)), var(--dark-square);
+}
+.highlighted {
+	background: linear-gradient(var(--highlight), var(--highlight)), var(--light-square);
 }
 
 #board-container .promotion {
@@ -85,13 +97,6 @@ body {
 	height: 50%;
 }
 
-.darkSquare.highlighted {
-	background: linear-gradient(var(--highlight), var(--highlight)), var(--dark-square);
-}
-.highlighted {
-	background: linear-gradient(var(--highlight), var(--highlight)), var(--light-square);
-}
-
 .vertical, .horizontal {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
@@ -101,3 +106,4 @@ body {
     grid-template-columns: repeat(8, 1fr);
     height: 100px;
 }
+
