--- a/src/styles.css
+++ b/src/styles.css
@@ -57,7 +57,7 @@ body {
 	background-size: 150%;
 }
 
-.darkSquare.possiblepiece, .square.possiblepiece {
+.square.darkSquare.possiblepiece, .square.possiblepiece {
 	background-image: url('./chess/cburnett/movepiece.svg');
 	background-repeat: no-repeat;
 	background-position: center;
@@ -67,6 +67,8 @@ body {
 .darkSquare.possiblepiece:hover, .square.possiblepiece:hover {
 	background-image: url('./chess/cburnett/move.svg');
 	background-size: 150%;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 
