--- a/src/styles.css
+++ b/src/styles.css
@@ -119,6 +119,14 @@ body {
 	height: 50%;
 }
 
+#board-container #svg-canvas {
+    position: absolute;
+    width: var(--board-size);
+    height: var(--board-size);
+    pointer-events: none;
+    z-index: 1;
+}
+
 .vertical, .horizontal {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
