--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,11 @@ body {
     background-color: black;
 }
 
+#root {
+    display: flex;
+    gap: 10px
+}
+
 #board-container{
     display: grid;
 	aspect-ratio: 1 / 1;
@@ -101,6 +106,7 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	background-color: rgba(0, 0, 0, 0.5);
+    z-index: 3;
 }
 
 #board-container .promotion>div {
