--- a/src/styles.css
+++ b/src/styles.css
@@ -10,12 +10,12 @@
 
 #controls {
 	display: flex;
-	justify-content: space-around;
-	width: 50%;
-	align-content: center;
-	height: 10%;
+	justify-content: center;
+	width: 30%;
+	flex-direction: column;
+	align-items: center;
+	gap: 3rem;
 }
-
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
