--- a/src/game/game.css
+++ b/src/game/game.css
@@ -23,10 +23,6 @@
 #controls>div>button {
     background-color: black;
 }
-#root {
-    display: flex;
-    gap: 10px
-}
 
 #board-container{
     display: grid;
@@ -183,3 +179,26 @@
     z-index: 2;
 }
 
+#players {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 50%;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+#players .whiteUser {
+    background-color: whitesmoke;
+    color: black;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
+
+#players .blackUser {
+    background-color: rgb(19, 19, 19);
+    color: whitesmoke;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
