Timers on home screen, timers pause when game finished

--- a/src/game/game.css
+++ b/src/game/game.css
@@ -202,3 +202,10 @@
     padding: 0.5rem;
     border-radius: 0.5rem;
 }
+
+#whiteTimer, #blackTimer {
+    color: white;
+    background-color: black;
+    width: fit-content;
+}
+
