--- a/src/game/game.css
+++ b/src/game/game.css
@@ -26,26 +26,37 @@
 
 #board-container{
     display: grid;
-	aspect-ratio: 1 / 1;
-	width: var(--board-size);
-	height: var(--board-size);
+    position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+#board-container::before {
+    content: '';
+    display: block;
+    padding-top: 100%;
 }
 
 #board {
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
-	aspect-ratio: 1 / 1;
+    grid-template-rows: repeat(8, 1fr);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 	background-color: var(--light-square);
-	position: relative;
-	width: var(--board-size);
+	position: absolute;
 }
 
 .square {
     position: relative;
-	aspect-ratio: 1/1;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: calc(1em + 1vw)
 }
 
 #board .square.dark {
@@ -104,8 +115,8 @@
 
 #board-container .promotion {
 	position: absolute;
-	width: var(--board-size);
-	height: var(--board-size);
+	width: 100%;
+	height: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	background-color: rgba(0, 0, 0, 0.5);
@@ -137,8 +148,8 @@
 
 #board-container #svg-canvas {
     position: absolute;
-    width: var(--board-size);
-    height: var(--board-size);
+    width: 100%;
+    height: 100%;
     pointer-events: none;
     z-index: 1;
 }
@@ -148,7 +159,7 @@
     color: var(--light-square);
     user-select: none;
     pointer-events: none;
-    padding: 0.2rem;
+    font-size: 0.5em;
 }
 
 #board .square>span.left-notation {
