--- a/src/landing/landing.css
+++ b/src/landing/landing.css
@@ -1,7 +1,7 @@
 :root {
-    --background-color: #19180A;
-    --secondary-background-color: #242210;
-    --tertiary-background-color: #2B2A1F;
+    --background-color: #0f0f0f;
+    --secondary-background-color: #1b1b1b;
+    --tertiary-background-color: #1f1f1f;
     --foreground-color: #F8EDEB;
     --alt-background: #A32525;
     --alt-background-hover: #C11B1B;
@@ -29,7 +29,6 @@ body {
     margin: 0;
     color: var(--foreground-color);
     width: clamp(20rem, 100%, 1920px);
-    overflow-x: hidden;
     background-image: radial-gradient(ellipse at top, #0538af 0% , #0a1429 100%);
     background-repeat: no-repeat;
     background-size: cover;
@@ -199,15 +198,18 @@ a#next:hover {
 a#next.hidden {
     opacity: 0%;
     pointer-events: none;
+    animation: none;
 }
 
 @keyframes showNext {
     0% {
         opacity: 0%;
         bottom: 80%;
+        pointer-events: none;
     }
     90% {
         opacity: 0%;
+        pointer-events: none;
     }
     95% {
         opacity: 50%;
@@ -221,25 +223,150 @@ a#next.hidden {
 section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 1rem;
-    width: 80%;
+    width: 100%;
     margin-top: 1rem;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
 }
 
 section > * {
     display: flex;
-    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 0.25rem;
     padding: 1rem;
+    margin: 16px;
+    text-align: center;
+}
+
+section h2 { 
+    order: -1;
+    margin-bottom: -1rem;
+}
+
+@media (min-width: 768px) {
+    section h2 {
+        order: 0;
+    }
 }
 
 #board-container-parent {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
     margin-bottom: 1rem;
+    width: 100%
 }
+
+#board-controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+#board-controls > * {
+    color: var(--foreground-color);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+#board-controls > *:hover {
+    color: #fff;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
+#board-controls > button > * {
+    font-size: 2rem;
+}
+
+footer {
+    width: 100%;
+    padding: 2rem 0;
+    padding-bottom: 0;
+}
+
+footer > section > div:first-child {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer > section #icon {
+    width: 40%;
+    max-width: 224px;
+    height: unset;
+    aspect-ratio: 1 / 1;
+    margin-bottom: -2rem;
+}
+
+footer > section h2 {
+    margin-top: -2rem;
+    margin-bottom: 1rem;
+    padding: 0;
+    font-size: 1.5rem;
+}
+
+footer > section {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 0;
+    width: 100%;
+    padding: 1rem;
+}
+
+footer > section > * {
+    color: var(--foreground-color);
+}
+
+footer > section a { 
+    color: var(--foreground-color);
+    background-color: var(--alt-background);
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    font-size: calc(var(--nav-font-size) * 0.8);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+footer > section a:hover {
+    color: #fff;
+    background-color: var(--alt-background-hover);
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
+footer > section > div:last-child {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    margin-top: 2rem;
+    padding-right: 3rem;
+}
+
+footer > section > div:last-child > a {
+    width: 100%;
+    text-align: center;
+}
+
+#end-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 0;
+}
+
+
