--- a/src/landing/landing.css
+++ b/src/landing/landing.css
@@ -34,100 +34,8 @@ body {
     background-size: cover;
 }
 
-#icon {
-    content: url('../chess/cburnett/wQ.svg');
-    width: 2.5rem;
-    height: 2.5rem;
-    margin: 0;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
 nav {
     background-color: rgba(0, 0, 0, 0.2);
-    font-size: var(--nav-font-size);
-    height: calc(var(--nav-font-size) * 3.5);
-    width: 100vw;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: rgba(0, 0, 0, 0.1) 0.1rem solid;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-nav #nav-links {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    margin-right: var(--nav-padding);
-}
-
-nav #nav-links #register {
-    background-color: var(--alt-background);
-    border-radius: 0.25rem;
-    padding: 0.5rem 1rem;
-    color: var(--foreground-color);
-}
-
-nav #nav-links #login {
-    background-color: var(--secondary-background-color);
-    border-radius: 0.25rem;
-    padding: 0.5rem 1rem;
-    color: var(--foreground-color);
-}
-
-nav #nav-links #register:hover {
-    background-color: var(--alt-background-hover);
-    color: #fff;
-}
-
-nav #nav-links #login:hover {
-    background-color: var(--tertiary-background-color);
-    color: #fff;
-}
-
-nav a {
-    color: var(--foreground-color);
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    font-size: calc(var(--nav-font-size) * 0.8);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-nav a:hover {
-    color: #fff;
-    transition-duration: 0.3s;
-    transition-timing-function: ease-in-out;
-}
-
-nav #title {
-    display: flex;
-    align-items: center;
-    border: none;
-    padding: 0;
-    margin-left: var(--nav-padding);
-    box-shadow: none;
-}
-
-nav #title #icon {
-    margin-right: calc(var(--nav-font-size) * 0.3);
-    width: calc(var(--nav-font-size) * 1.8);
-    height: calc(var(--nav-font-size) * 1.8);
-}
-
-nav h1 {
-    margin: 0;
-    padding: 0;
 }
 
 main {
@@ -355,6 +263,7 @@ footer > section > div:last-child {
     align-items: center;
     margin-top: 2rem;
     padding-right: 3rem;
+    padding-left: 3rem;
 }
 
 footer > section > div:last-child > a {
@@ -368,8 +277,9 @@ footer > section > div:last-child > a {
     align-items: center;
     width: 100%;
     padding: 1rem 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5) !important;
     border-radius: 0;
+    margin: auto;
 }
 
 
