--- a/src/home/home.css
+++ b/src/home/home.css
@@ -103,8 +103,6 @@ h1, h2 {
 #game-history-list {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
-    padding: 0.5rem;
     border-radius: 0.5rem;
     background-color: var(--secondary-background-color);
     width: 50%;
@@ -114,6 +112,32 @@ h1, h2 {
 #game-history-list > a {
     display: flex;
     text-decoration: none;
+    padding: var(--game-list-padding) 0 var(--game-list-padding) 0;
+    border: var(--background-color) 1px solid;
+    justify-content: space-between;
+}
+
+#game-history-list > a > .time-control {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 5.5rem;
+    gap: 0.5rem;
+    flex: 0.5;
+}
+
+#game-history-list > a > .reason {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    flex: 1;
+}
+
+#game-history-list > a > .reason > div {
+    text-align: center;
 }
 
 #game-history-list > a > .players {
@@ -121,13 +145,23 @@ h1, h2 {
     flex-direction: column;
     gap: 0.5rem;
     align-items: left;
+    flex: 1;
 }
 
 #game-history-list > a > .players > * {
     display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+#game-history-list > a > .players > * > div {
+    height: 100%;
 }
 
 #game-history-list > a > .players > * > .side {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 1.2rem;
     height: 1.2rem;
     padding: 0.7rem;
@@ -136,6 +170,10 @@ h1, h2 {
     border: #888 2px solid; 
 }
 
+#game-history-list > a > .players > * > .side > .winner {
+    font-weight: 600;
+    font-size: 1.3rem;
+}
 
 .white-player > .side {
     background-color: var(--foreground-color);
@@ -143,6 +181,21 @@ h1, h2 {
 
 .black-player > .side {
     background-color: var(--tertiary-background-color);
+}
+
+.white-player > .side > .winner {
+    color: var(--tertiary-background-color);
+}
+
+.black-player > .side > .winner {
+    color: var(--foreground-color);
+}
+
+#game-history-list > a > .date {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
 }
 
 #game-preview {
