--- a/src/home/home.css
+++ b/src/home/home.css
@@ -22,12 +22,30 @@ body {
     background-color: var(--background-color);
 }
 
-h1, h2, h3 {
+h1, h2, h3, dialog > div > h4 {
     text-align: center;
 }
 
 h3 {
     margin-bottom: 3rem;
+}
+
+
+dialog {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.5);
+
+}
+
+dialog > div {
+    background-color: var(--tertiary-background-color);
+    padding: 1rem;
+    border-radius: 0.5rem;
 }
 
 div.history {
@@ -194,6 +212,8 @@ div.history > div:last-child > div:last-child {
 #game-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    width: 90%;
+    margin: auto;
 }
 
 #game-history {
@@ -280,7 +300,7 @@ div.history > div:last-child > div:last-child {
 }
 
 #game-history-list > a.draw {
-    background-color: #4E4E4E;
+    background-color: var(--quaternary-background-color);
 }
 
 #game-history-list > a.loss {
@@ -397,13 +417,16 @@ div.history > div:last-child > div:last-child {
         align-items: center;
         width: 95%;
     }
+    #game-list {
+        width: 95%;
+    }
     div.history {
         width: 95%;
     }
     #game-history-list > a {
         filter: brightness(1);
     }
-    #game-history-list > a.active {
+    #game-history-list > a.active:not(a.active.draw) {
         filter: brightness(1);
     }
     #game-history-list > .paginator > button {
@@ -417,6 +440,17 @@ div.history > div:last-child > div:last-child {
 @media screen and (max-width: 500px) {
     #game-history-list > a > .reason > div:last-child{
         display: none;
+    }
+    dialog {
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+        min-width: 100%;
+    }
+    dialog > div {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
@@ -451,7 +485,7 @@ div.history > div:last-child > div:last-child {
     justify-content: center;
 }
 
-#no-games button, #refresh {
+#no-games button, #refresh, #create-final {
     all: unset;
     background-color: var(--alt-background);
     color: var(--foreground-color);
@@ -568,14 +602,13 @@ input:checked+.slider:hover {
     display: none;
 }
 
-.radio-container {
+.history > div > .radio-container {
     display: flex;
     gap: 0.5rem;
     align-items: center;
 }
 
-
-.tab {
+.tabs > label {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -593,33 +626,110 @@ input:checked+.slider:hover {
     user-select: none;
 }
 
-.radio-container input[id="radio-1"]:checked~.glider {
+.radio-container input[id="amount-1"]:checked~.glider {
     transform: translateX(0);
 }
 
-.radio-container input[id="radio-2"]:checked~.glider {
+.radio-container input[id="amount-2"]:checked~.glider {
     transform: translateX(100%);
 }
 
-.radio-container input[id="radio-3"]:checked~.glider {
+.radio-container input[id="amount-3"]:checked~.glider {
     transform: translateX(200%);
 }
 
-.radio-container input[id="radio-4"]:checked~.glider {
+.radio-container input[id="amount-4"]:checked~.glider {
     transform: translateX(300%);
+}
+
+.radio-container input[id="length-1"]:checked~.glider {
+    transform: translateX(0);
+}
+
+.radio-container input[id="length-2"]:checked~.glider {
+    transform: translateX(100%);
+}
+
+.radio-container input[id="length-3"]:checked~.glider {
+    transform: translateX(200%);
+}
+
+.radio-container input[id="length-4"]:checked~.glider {
+    transform: translateX(300%);
+}
+
+.radio-container input[id="length-5"]:checked~.glider {
+    transform: translateX(400%);
+}
+
+.radio-container input[id="length-6"]:checked~.glider {
+    transform: translateX(500%);
+}
+
+.radio-container input[id="increment-1"]:checked~.glider {
+    transform: translateX(0);
+}
+
+.radio-container input[id="increment-2"]:checked~.glider {
+    transform: translateX(100%);
+}
+
+.radio-container input[id="increment-3"]:checked~.glider {
+    transform: translateX(200%);
+}
+
+.radio-container input[id="increment-4"]:checked~.glider {
+    transform: translateX(300%);
+}
+
+.radio-container input[id="increment-5"]:checked~.glider {
+    transform: translateX(400%);
+}
+
+.radio-container input[id="side-1"]:checked~.glider {
+    background-color: var(--foreground-color);
+    transform: translateX(0);
+}
+
+.radio-container input[id="side-1"]:checked + label{
+    color: var(--background-color);
+}
+
+.radio-container input[id="side-2"]:checked~.glider {
+    background-color: var(--background-color);
+    transform: translateX(100%);
+}
+
+.radio-container input[id="side-3"]:checked~.glider {
+    transform: translateX(200%);
 }
 
 .glider {
     position: absolute;
     display: flex;
-    width: 25%;
     height: 100%;
     background-color: var(--alt-background);
     z-index: 1;
     border-radius: 2px;
     transition: 0.2s;
-    animation-name: glide;
 }
+
+.history > div > .radio-container > .tabs > .glider {
+    width: 25%;
+}
+
+.radio-container.length > .tabs > .glider {
+    width: 16.666%;
+}
+
+.radio-container.increment > .tabs > .glider {
+    width: 20%;
+}
+
+.radio-container.side > .tabs > .glider {
+    width: 33.333%;
+}
+
 
 /* ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     Modified version of:
