--- a/src/header/header.css
+++ b/src/header/header.css
@@ -176,6 +176,7 @@ nav h1 {
     width: 100%;
     height: 100%;
     padding: 0.5rem;
+    padding-right: 0;
     text-decoration: none;
     font-weight: bold;
     color: inherit
