Chrome bug fixes

--- a/src/game/game.css
+++ b/src/game/game.css
@@ -20,6 +20,7 @@
     --nav-padding: 1vw;
     --board-size: unset !important;
     --game-list-padding: 0.5rem;
+    color-scheme: dark;
 }
 
 * {
@@ -31,6 +32,7 @@ body {
     color: var(--foreground-color);
     margin: 0;
     padding: 0;
+    overflow-x: clip;
 }
 
 #game-grid-container {
@@ -97,6 +99,7 @@ body {
 
 #game-info > ol {
     overflow: scroll;
+    overflow-x: hidden;
     overscroll-behavior: contain;
     margin: 0;
     padding: 0;
