Clock changes when going through history

--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -28,3 +28,7 @@ footer > * {
     background-color: var(--secondary-background-color);
     border-radius: 0;
 }
+
+#end-footer > * {
+    text-decoration: none;
+}
