Register page styling + clientside validation

--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -30,5 +30,10 @@ footer > * {
 }
 
 #end-footer > * {
+    color: var(--foreground-color);
     text-decoration: none;
+}
+
+#end-footer > *:hover {
+    color: #fff;
 }
