--- a/src/register/register.css
+++ b/src/register/register.css
@@ -3,19 +3,107 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-form {
-    display: flex;
     flex-direction: column;
+    margin: 0;
+    justify-content: space-around;
+    background-repeat: round;
 }
 
-form>button {
-    margin: 1rem;
+main {
+    height: 100%;
+    width: 100%;
+}
+
+main h1 {
+    font-size: 2rem;
+    letter-spacing: -0.76px;
+    height: unset;
+    margin: -0.5rem;
+    margin-top: 1rem;
+    line-height: unset;
+    animation-duration: 1s;
+}
+
+main > div {
+    background-color: rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    width: 100%;
+    min-width: 300px;
+    padding: 2rem;
+    border-radius: 10px;
+}
+
+main > div > form {
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+    padding-top: 1rem;
+}
+
+main > div > form > * {
+    margin-top: 3rem;
+} 
+
+main > div > form > label {
+    margin-bottom: -3rem;
+}
+
+label {
+    margin-left: 3%;
+}
+
+input {
+    all: unset;
+    border-bottom: rgba(255, 255, 255, 0.5) 1px solid;
+    width: 90%;
+    padding: 10px;
+    margin: auto;
+}
+
+input::placeholder {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 0.9rem;
+}
+
+main > div > form > button {
+    background-color: transparent;
+    border: 1px solid var(--foreground-color);
+    color: var(--foreground-color);
+    text-decoration: none;
+    border-radius: 0.25rem;
+    font-size: 0.9rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 0.5rem 1rem;
+    width: fit-content;
+    margin: auto;
+    margin-top: 3rem;
+    cursor: pointer;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+}
+
+main > div > form > button:hover {
+    color: #FFF;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out !important;
+    background-color: var(--alt-background-hover);
+    border: 1px solid var(--alt-background-hover);
+}
+footer {
+    padding: 0 !important;
+}
+
+#end-footer {
+    background-color: rgba(0, 0, 0, 0.2) !important;
 }
 
