--- a/src/login/login.css
+++ b/src/login/login.css
@@ -4,18 +4,30 @@
 }
 
 body {
-    display: flex;
+    background-image: none;
+}
+
+main {
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
+main h1 {
+    animation: none;
 }
 
-form>button {
-    margin: 1rem;
+main > div {
+    background-color: var(--secondary-background-color);
+}
+
+main > div > form > button {
+    background-color: var(--alt-background);
+    border: 1px solid var(--alt-background);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#end-footer {
+    background-color: var(--secondary-background-color) !important;
 }
 
